<resources>
    <string name="app_name">ITF Perú</string>
    <string name="singin">Acceder</string>
    <string name="img">Imagen</string>
    <string name="version">Version 1.0</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="title">Title</string>
    <string name="login">Iniciando Sesión…</string>
    <string name="orden">Orden :</string>
    <string name="contrato">Contrato :</string>
    <string name="medidor">Medidor :</string>
    <string name="client">Cliente :</string>
    <string name="direccion">Dirección</string>
    <string name="title_activity_suministro">SuministroActivity</string>
    <string name="punto">.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab1">General</string>
    <string name="tab2">Direcciones</string>
    <string name="tab3">Productos</string>
    <string name="tab4">A la Fecha</string>
    <string name="tab5">Mensual</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operario">Operario</string>
    <string name="area">Area</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="titulo_de_trabajo">Título de Trabajo</string>
    <string name="lugar">Lugar</string>
    <string name="check_one">Charla Pre Operacional, reconociendo previamente su zona de trabajo. Identificar los peligros y evaluar los riesgos, estableciendo las medidas de control vinculadas.</string>
    <string name="check_two">Revisar que los EPP, herramientas y otros medios de trabajos se encuentren en buen estado de conversación.</string>
    <string name="siguiente">Siguiente</string>
    <string name="observation">Observación</string>
    <string name="descripcion">Descripción</string>
    <string name="save">Guardar</string>
    <string name="observacion">Observación :</string>


    <string name="title_menu">Menu Principal</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="m">M</string>
    <string name="b">B</string>
    <string name="fecha_title">Fecha</string>
    <string name="observacion2">Observación 2</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="ver">Ver</string>
    <string name="deletePhoto">Eliminar Foto</string>
    <string name="si">SI</string>
    <string name="cancel">Cancelar</string>
    <string name="cantidad_de_lectura">Cantidad de Lectura</string>
    <string name="search">Busqueda</string>
    <string name="c">C:</string>
    <string name="s">S:</string>
    <string name="ok">OK</string>
    <string name="ir_para_adelante_o_atras">Ir para adelante o atras</string>
    <string name="medidor2">Medidor</string>
    <string name="actualizar">actualizar</string>
    <string name="actividad">Actividad</string>
    <string name="try_again">Por favor volver a intentarlo</string>
    <string name="centro_medico">Centro Médico</string>
    <string name="supervisor">Supervisor</string>
    <string name="sucursal">Sucursal</string>
    <string name="peligros_y_o_riesgos">PELIGROS Y/O RIESGOS</string>
    <string name="tarea">Tarea</string>
    <string name="entorno">Entorno</string>
    <string name="clasif_peligro_riesgo">Clasif Peligro / Riesgo</string>
    <string name="prob_ocurrencia">Prob Ocurrencia</string>
    <string name="se_verifico_estado">Se verifico Estado</string>
    <string name="medidas_de_control">Medidas de Control</string>
    <string name="ubicacion">Ubicación</string>
    <string name="persona">Persona</string>
    <string name="security">En Seguridad</string>
    <string name="salud">En Salud Ocupacional</string>
    <string name="ir">Ir</string>
    <string name="cargando">Cargando…</string>
    <string name="ta">TA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">header_title</string>
    <string name="nav_header_subtitle">sub_title</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="envio_de_pendientes">Enviar Pendientes</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="reparacion">Reparación Veredas</string>
    <string name="work">Trabajos SS</string>
    <string name="imagen">Imagen</string>
    <string name="agregar_kilometraje">Agregar Kilometraje</string>
    <string name="km">km</string>
    <string name="km_salida">Salida :</string>
    <string name="km_entrada">Entrada :</string>
    <string name="texto">texto</string>
    <string name="ingrese_kilometraje">Ingrese el Kilometraje</string>
    <string name="texto_envio2">Envios de Reparación y Trabajos</string>
    <string name="texto_envio1">Enviar Vehiculos</string>
    <string name="close">Cerrar</string>
    <string name="ancho">Ancho</string>
    <string name="m2">M2</string>
    <string name="obra">Obra</string>
    <string name="n_poste">N° Poste</string>
    <string name="adicionar_puntos_antes_off_despues_on">Adicionar Puntos Antes (Off) | Despues (On)</string>
    <string name="nombre_del_punto">Nombre del Punto</string>
    <string name="largo">Largo</string>
    <string name="estado">Seleccione Estado</string>
    <string name="next">Siguiente</string>
    <string name="c1">campo1</string>
    <string name="espesor">Espesor</string>
    <string name="tipo_material">Tipo de Material</string>
    <string name="title_activity_general_maps">Map</string>

    <string name="sync1">Esta seguro que desea descargar la informacion de Datos Maestros ?</string>
    <string name="sync2">Esta seguro que desea descargar la informacion de Visita Medica ?</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="save_direction">Agregar Dirección</string>
    <string name="title_activity_visita">VisitaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add">Agregar</string>

    <!--table-->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="row_show">Show 5. Row</string>
    <string name="row_hide">Hide 5. Row</string>
    <string name="hint_identificador">Identificador</string>
    <string name="hint_seleccione">Seleccione</string>
    <string name="hint_cmp">CMP</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_ingrese_nombre">Ingrese Nombre</string>
    <string name="hint_apellido_paterno">Apellido Paterno</string>
    <string name="hint_ingrese_apellido_paterno">Ingrese Apellido Paterno</string>
    <string name="hint_apellido_materno">Apellido Materno</string>
    <string name="hint_ingrese_apellido_materno">Ingrese Apellido Materno</string>
    <string name="hint_categoria">Categoria</string>
    <string name="hint_seleccione_categoria">Seleccione Categoria</string>
    <string name="hint_especialidad_1">Especialidad 1</string>
    <string name="hint_seleccione_especialidad_1">Seleccione Especialidad 1</string>
    <string name="hint_especialidad_2">Especialidad 2</string>
    <string name="hint_seleccione_especialidad_2">Seleccione Especialidad 2</string>
    <string name="hint_fecha_nacimiento">Fecha Nacimiento</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="sexo">Sexo</string>
    <string name="hint_seleccione_sexo">Seleccione Sexo</string>
    <string name="hint_email">Email</string>
    <string name="hint_ingrese_email">Ingrese Email</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_ingrese_telefono">Ingrese Telefono</string>
    <string name="hint_tipo_visita">Tipo Visita</string>
    <string name="hint_seleccione_tipo_de_visita">Seleccione Tipo de Visita</string>
</resources>