<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.edition.GeneralFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_identificador"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutIdentificador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextIdentificador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_cmp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutCMP"
            app:layout_constraintTop_toBottomOf="@+id/layoutIdentificador" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCMP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/layoutNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCMP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cmp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_nombres"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutNombre"
            app:layout_constraintTop_toBottomOf="@+id/layoutIdentificador" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutCMP"
            app:layout_constraintTop_toBottomOf="@+id/layout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_nombre"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_apellido_paterno"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutApellidoP"
            app:layout_constraintTop_toBottomOf="@+id/layoutNombre" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutApellidoP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@+id/layoutApellidoM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_apellido_paterno"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_apellido_materno"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutApellidoM"
            app:layout_constraintTop_toBottomOf="@+id/layoutNombre" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutApellidoM"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutApellidoP"
            app:layout_constraintTop_toBottomOf="@+id/layout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_apellido_materno"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_categoria"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutCategoria"
            app:layout_constraintTop_toBottomOf="@+id/layoutApellidoP" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCategoria"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@+id/layoutEspecialidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione_categoria" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_especialidad_1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutEspecialidad"
            app:layout_constraintTop_toBottomOf="@+id/layoutApellidoM" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEspecialidad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutCategoria"
            app:layout_constraintTop_toBottomOf="@+id/layout7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEspecialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione_especialidad_1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_especialidad_2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/layoutEspecialidad2"
            app:layout_constraintTop_toBottomOf="@+id/layoutCategoria" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEspecialidad2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEspecialidad2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione_especialidad_2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_fecha_nacimiento"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutFechaN"
            app:layout_constraintTop_toBottomOf="@+id/layoutEspecialidad2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFechaN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@+id/layoutSexo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFechaN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/dd_mm_yyyy" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sexo"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutSexo"
            app:layout_constraintTop_toBottomOf="@+id/layoutEspecialidad2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSexo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutCategoria"
            app:layout_constraintTop_toBottomOf="@+id/layout10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione_sexo" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_email"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/layoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/layoutSexo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout11">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_email"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_telefono"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/layoutTelefono"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTelefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_telefono"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/layout13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_tipo_visita"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/layoutTipoVisita"
            app:layout_constraintTop_toBottomOf="@+id/layoutTelefono" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTipoVisita"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout13">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTipoVisita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:focusable="false"
                android:hint="@string/hint_seleccione_tipo_de_visita" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_right"
            app:iconGravity="end"
            app:iconTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTipoVisita" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>